--- a/NhapHang.html
+++ b/NhapHang.html
@@ -28,7 +28,7 @@
             </div>
             <div class="col-9">
                 <div class="mb-3">
-                    <button class="btn btn-primary" data-toggle="modal" data-target="#addClother" id="button">Nhập Hàng Mới</button>
+                    <button class="btn btn-primary" data-toggle="modal" data-target="#addClother" id="button">Nhập Hàng Mơi</button>
                     <h4>Quản Lí Sản Phẩm</h4>
                 </div>
                 <div>
