--- a/QLSP.html
+++ b/QLSP.html
@@ -12,7 +12,18 @@
 
 <body>
   <div class="container">
-    <img class="lo-go" src="image/logo.png" alt="logo">
+    <div class="avatar">
+      <img class="lo-go" src="image/logo.png" alt="logo">
+
+      <li class="nav-item active dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          <img class="user-avatar" src="image/avatar.png" alt="avatar"> admin</a>
+        <div class="dropdown-menu" aria-labelledby="dropdown04">
+          <a class="dropdown-item" href="login.html">Đăng Xuất</a>
+        </div>
+      </li>
+    </div>
     <div class="navba">
       <ul>
         <li><a href="QLSP.html">Quản Lí Sản Phẩm</a></li>
@@ -30,7 +41,8 @@
       </div>
       <div class="col-9">
         <div class="mb-3">
-          <button class="btn btn-primary" data-toggle="modal" data-target="#add-shoes" id="button">Thêm Hàng Mới</button>
+          <button class="btn btn-primary" data-toggle="modal" data-target="#add-shoes" id="button">Thêm Hàng
+            Mới</button>
           <h4>Quản Lí Sản Phẩm</h4>
         </div>
         <div>
@@ -42,7 +54,7 @@
                 <th>Tên Sản Phẩm</th>
                 <th>Thương Hiệu</th>
                 <th>Size</th>
-                <th>Số Lượng</th>
+                <th>Số Lượng</th> 
                 <th>Lựa Chọn</th>
               </tr>
             </thead>
