--- a/NhapHang.html
+++ b/NhapHang.html
@@ -11,7 +11,27 @@
 </head>
 
 <body>
-    <h1>Trang Nhập Hàng</h1>
+    <div class="container">
+        <div class="avatar">
+            <img class="lo-go" src="image/logo.png" alt="logo">
+
+            <li class="nav-item active dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    <img class="user-avatar" src="image/avatar.png" alt="avatar"> admin</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown04">
+                    <a class="dropdown-item" href="login.html">Đăng Xuất</a>
+                </div>
+            </li>
+        </div>
+        <div class="navba">
+            <ul>
+                <li><a href="QLSP.html">Quản Lí Sản Phẩm</a></li>
+                <li><a href="NhapHang.html">Nhập Hàng</a></li>
+                <li><a href="#">Lập Hóa Đơn</a></li>
+            </ul>
+        </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
