--- a/QLSP.html
+++ b/QLSP.html
@@ -28,7 +28,7 @@
       <ul>
         <li><a href="QLSP.html">Quản Lí Sản Phẩm</a></li>
         <li><a href="NhapHang.html">Nhập Hàng</a></li>
-        <li><a href="#">Lập Hóa Đơn</a></li>
+        <li><a href="lapHoaDon.html">Lập Hóa Đơn</a></li>
       </ul>
     </div>
 
