--- a/lapHoaDon.html
+++ b/lapHoaDon.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Quan li san pham</title>
-    <link rel="stylesheet" href="NhapHang.css">
+    <title>Lập hóa đơn</title>
+    <link rel="stylesheet" href="lapHoaDon.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 
@@ -28,15 +28,30 @@
             <ul>
                 <li><a href="QLSP.html">Quản Lí Sản Phẩm</a></li>
                 <li><a href="NhapHang.html">Nhập Hàng</a></li>
-                <li><a href="lapHoaDon.html"></a>Lập Hóa Đơn</a></li>
+                <li><a href="lapHoaDon.html">Lập Hóa Đơn</a></li>
             </ul>
         </div>
+
+        <div class="row">
+            <div class="col-3">
+                <button class="btn btn-primary" data-toggle="modal" data-target="bill">Lập hóa đơn</button>
+            </div>
+        </div>
+        <div>
+            <button type="button" class="btn btn-success" style="margin-top: 10px;"><a href="inHoaDon.html" style="color: white;">In hóa đơn</a></button>
+        </div>
+
+
+
     </div>
+
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="NhapHang.js"></script>
+    <script src="lapHoaDon.js"></script>
 </body>
 
 </html>
