--- a/lapHoaDon.html
+++ b/lapHoaDon.html
@@ -32,15 +32,28 @@
             </ul>
         </div>
 
-        <div class="row">
-            <div class="col-3">
-                <button class="btn btn-primary" data-toggle="modal" data-target="bill">Lập hóa đơn</button>
-            </div>
-        </div>
         <div>
-            <button type="button" class="btn btn-success" style="margin-top: 10px;"><a href="inHoaDon.html" style="color: white;">In hóa đơn</a></button>
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th>STT</th>
+                  <th>Mã Hóa Đơn</th>
+                  <th>Thời gian</th>
+                  <th>Thương Hiệu</th>
+                  <th>Khách hàng</th>
+                  <th>Tổng Tiền hàng</th> 
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody id="  ">
+                <h2 id="   "></h2>
+              </tbody>
+            </table>
+          </div>
+        <div>
+            <button type="button" class="btn btn-success" style="margin-top: 10px;" onclick="inHoaDon()">In hóa đơn</button>
         </div>
-
+        
 
 
     </div>
