--- a/NhapHang.html
+++ b/NhapHang.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Quan li san pham</title>
+    <title>Nhập hàng</title>
     <link rel="stylesheet" href="NhapHang.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
-
 <body>
     <div class="container">
         <div class="avatar">
@@ -26,10 +24,35 @@
         </div>
         <div class="navba">
             <ul>
-                <li><a href="QLSP.html">Quản Lí Sản Phẩm</a></li>
-                <li><a href="NhapHang.html">Nhập Hàng</a></li>
+                <li><a onclick="goToQLSP()">Quản Lí Sản Phẩm</a></li>
+                <li><a onclick="goToNhapHang()">Nhập Hàng</a></li>
                 <li><a href="#">Lập Hóa Đơn</a></li>
             </ul>
+        </div>
+        <div class="row">
+            <div class="col-8">
+                <ul class="row" id="listShoes">
+
+                </ul>
+            </div>
+            <div class="col-4">
+                <input class="form-control form-control" type="text" placeholder="Nhập tên khách hàng">
+                <button class="btn btn-primary" id="buttonOK">Đồng ý</button>
+                <div>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Tên SP</th>
+                                <th>SL</th>
+                                <th>TT</th>
+                            </tr>
+                        </thead>
+                        <tbody id = "Picked">
+                            
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 
