--- a/QLSP.html
+++ b/QLSP.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Nhập Hàng</title>
+  <title>Quản lý sản phẩm</title>
   <link rel="stylesheet" href="QLSP.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
-
+<li></li>
 <body>
   <div class="container">
     <div class="avatar">
@@ -26,8 +26,8 @@
     </div>
     <div class="navba">
       <ul>
-        <li class="nav-item active" ><a href="QLSP.html">Quản Lí Sản Phẩm</a></li>
-        <li><a href="NhapHang.html">Nhập Hàng</a></li>
+        <li id="active" ><a onclick="goToQLSP()">Quản Lí Sản Phẩm</a></li>
+        <li><a onclick="goToNhapHang()">Nhập Hàng</a></li>
         <li><a href="#">Lập Hóa Đơn</a></li>
       </ul>
     </div>
