--- a/QLSP.html
+++ b/QLSP.html
@@ -28,7 +28,7 @@
       <ul>
         <li class="nav-item active" ><a href="QLSP.html">Quản Lí Sản Phẩm</a></li>
         <li><a href="GianHang.html">Gian Hàng</a></li>
-        <li><a href="HoaDon.html">Lập Hóa Đơn</a></li>
+        <li><a href="lapHoaDon.html">Lập Hóa Đơn</a></li>
       </ul>
     </div>
 
