--- a/GianHang.html
+++ b/GianHang.html
@@ -29,7 +29,7 @@
             <ul>
                 <li><a href="QLSP.html">Quản Lí Sản Phẩm</a></li>
                 <li><a href="GianHang.html">Gian Hàng</a></li>
-                <li><a href="HoaDon.html">Lập Hóa Đơn</a></li>
+                <li><a href="lapHoaDon.html">Lập Hóa Đơn</a></li>
             </ul>
         </div>
 
