--- a/QLSP.html
+++ b/QLSP.html
@@ -33,13 +33,13 @@
     </div>
 
     <div class="row">
-      <div class="col-3">
+      <div class="col-2">
         <button class="btn btn-primary" onclick="Search() ">Tìm Kiếm</button><br><br>
         <input type="text" class="form-control" id="searchCode" placeholder="Tìm Theo Mã Sản Phẩm"><br>
         <input type="text" class="form-control" id="searchName" placeholder="Tìm Theo Tên Sản Phẩm" ><br>
         <input type="text" class="form-control" id="searchBrand" placeholder="Tìm Theo Thương Hiệu"><br>
       </div>
-      <div class="col-10">
+      <div class="col">
         <div class="mb-3">
           <button class="btn btn-primary" data-toggle="modal" data-target="#add-shoes" id="button">Thêm Hàng
             Mới</button>
