--- a/GianHang.html
+++ b/GianHang.html
@@ -5,46 +5,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GianHang</title>
+    <title>Quan li san pham</title>
+    <title>Nhập hàng</title>
     <link rel="stylesheet" href="GianHang.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link href="image/font-awesome/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <div class="avatar">
             <img class="lo-go" src="image/logo.png" alt="logo">
-
+      
             <li class="nav-item active dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    <img class="user-avatar" src="image/avatar.png" alt="avatar"> admin</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown04">
-                    <a class="dropdown-item" href="login.html">Đăng Xuất</a>
-                </div>
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                <img class="user-avatar" src="image/avatar.png" alt="avatar"> admin</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown04">
+                <a class="dropdown-item" href="login.html">Đăng Xuất</a>
+              </div>
             </li>
-        </div>
+          </div>
         <div class="navba">
             <ul>
-                <li><a href="QLSP.html">Quản Lí Sản Phẩm</a></li>
-                <li><a href="GianHang.html">Gian Hàng</a></li>
-                <li><a href="lapHoaDon.html">Lập Hóa Đơn</a></li>
+                <li><a onclick="goToQLSP()">Quản Lí Sản Phẩm</a></li>
+                <li><a onclick="goToNhapHang()">Nhập Hàng</a></li>
+                <li><a href="#">Lập Hóa Đơn</a></li>
             </ul>
         </div>
-
         <div class="row">
             <div class="col-8">
-                <!-- <i class="far fa-search"></i> -->
-                <input type="text" class="form-control" placeholder="Tìm Mặt Hàng" id="txtTimHang">
-                <div>
-                    <ul id="list">
-                    </ul>
-                </div>
-            </div>
+                <ul class="row" id="listShoes">
 
+                </ul>
+            </div>
             <div class="col-4">
-                <span>Hóa Đơn</span>
+                <input class="form-control form-control" type="text" placeholder="Nhập tên khách hàng">
+                <button class="btn btn-primary" id="buttonOK">Đồng ý</button>
+                <div>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Tên SP</th>
+                                <th>SL</th>
+                                <th>TT</th>
+                            </tr>
+                        </thead>
+                        <tbody id = "Picked">
+
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
@@ -53,6 +63,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="GianHang.js"></script>
-</body>
-
-</html>
+  </body>
+  
+  </html>
