update lai qlsp

--- a/GianHang.html
+++ b/GianHang.html
@@ -39,7 +39,7 @@
                 </ul>
             </div>
             <div class="col-4">
-                <input class="form-control form-control" type="text" placeholder="Nhập tên khách hàng">
+                <input class="form-control form-control" type="text" placeholder="Nhập tên khách hàng"><br>
                 <button class="btn btn-primary" id="buttonOK">Đồng ý</button>
                 <div>
                     <table class="table">
