--- a/QLSP.html
+++ b/QLSP.html
@@ -26,7 +26,7 @@
     <div class="navba">
       <ul>
         <li id="active" ><a onclick="goToQLSP()">Quản Lí Sản Phẩm</a></li>
-        <li><a onclick="goToNhapHang()">Nhập Hàng</a></li>
+        <li><a onclick="goToNhapHang()">Gian Hàng</a></li>
         <li><a href="lapHoaDon.html">Lập Hóa Đơn</a></li>
       </ul>
     </div>
