--- a/GianHang.html
+++ b/GianHang.html
@@ -28,7 +28,7 @@
         <div class="navba">
             <ul>
                 <li><a onclick="goToQLSP()">Quản Lí Sản Phẩm</a></li>
-                <li><a onclick="goToNhapHang()">Nhập Hàng</a></li>
+                <li><a onclick="goToNhapHang()">Gian Hàng</a></li>
                 <li><a href="#">Lập Hóa Đơn</a></li>
             </ul>
         </div>
