--- a/GianHang.html
+++ b/GianHang.html
@@ -15,16 +15,15 @@
     <div class="container">
         <div class="avatar">
             <img class="lo-go" src="image/logo.png" alt="logo">
-      
+
             <li class="nav-item active dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">
-                <img class="user-avatar" src="image/avatar.png" alt="avatar"> admin</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="login.html">Đăng Xuất</a>
-              </div>
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img class="user-avatar" src="image/avatar.png" alt="avatar"> admin</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown04">
+                    <a class="dropdown-item" href="login.html">Đăng Xuất</a>
+                </div>
             </li>
-          </div>
+        </div>
         <div class="navba">
             <ul>
                 <li><a onclick="goToQLSP()">Quản Lí Sản Phẩm</a></li>
@@ -32,7 +31,7 @@
                 <li><a href="#">Lập Hóa Đơn</a></li>
             </ul>
         </div>
-        <div class="row">
+        <div class="row" id="a-product">
             <div class="col-8">
                 <ul class="row" id="listShoes">
 
@@ -50,10 +49,16 @@
                                 <th>TT</th>
                             </tr>
                         </thead>
-                        <tbody id = "Picked">
+                        <tbody id="Picked">
 
                         </tbody>
+                        <tfoot id="total">
+
+                        </tfoot>
                     </table>
+                    <div>
+                        <button class="btn btn-success">Thanh Toán</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -63,6 +68,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="GianHang.js"></script>
-  </body>
-  
-  </html>
+</body>
+
+</html>
